--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#818181</color>
     <color name="btn">#EA8537</color>
+    <color name="icon">#EA8537</color>
 </resources>
